# authsome

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  skills-lock.json  suggestions.md
.github/: release-please-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: UBIQUITOUS_LANGUAGE.md  agent-sso-design.md  authsome-sidecar-design.md  cli.md  manual-testing.md  register-provider.md
docs-site/: docs.json
skills/authsome/: REGISTER_PROVIDER.md  SKILL.md
specs/: authsome-v1.md
src/authsome/: __init__.py  audit.py  cli.py  client.py  context.py  errors.py  utils.py
src/authsome/audit/: __init__.py
src/authsome/auth/: __init__.py
src/authsome/bundled_providers/: __init__.py  ahrefs.json  apollo.json  atlassian.json  beehiiv.json  (+35 more)
tests/: __init__.py  conftest.py  test_bridge.py  test_cli.py  test_client.py  test_crypto.py  test_errors.py  test_flows.py  test_flows_dcr_pkce.py  test_flows_device_code.py  test_flows_pkce.py  test_models.py  test_proxy.py  test_registry.py  test_store.py  test_utils.py
tests/auth/: test_auth_layer.py  test_bridge.py  test_flows.py  test_flows_dcr_pkce.py  test_flows_device_code.py  test_flows_pkce.py  test_login_requirements.py  test_models.py  test_registry.py
tests/common/: test_audit.py  test_cli.py  test_errors.py
tests/proxy/: test_proxy.py
tests/test_providers/: test_http.json  test_localhost.json  test_unreachable.json  test_valid.json
tests/vault/: test_crypto.py  test_store.py
(+51 files in other folders)
