[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "authsome"
version = "0.1.0"
description = "A portable local authentication library for AI agents and developer tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Authsome Contributors" },
]
keywords = ["auth", "credentials", "oauth2", "api-key", "mcp", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "cryptography>=41.0",
    "keyring>=24.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
authsome = "authsome.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/authsome"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
